*lib/sanitize.php --> new function sanitize_mb($str), which will cut a string until it is a valid encoding - or 0.
[FIXES]
Well, a big group of problems shows up with multibyte strings. substr breaks multibytes, hence causing errors.
*battle.php --> line 404. Fixed an error where no $creature['experiencegained'] was defined. Causing errors in PHP 5.3.3
*lib/commentary.php --> same here + added GM/MOD stuff to the names
*lib/mail/case_*.php --> fixed substrs and added sanitize_mb if stuff breaks from httpget (length)
*logdnet.php --> encoding fix for other servers
[REMOVES]
[NOTES]

Changes to 1.2.2 +nb

[CHANGES]
*bans.php,user.php,lib/bans/*.php,lib/constants.php,superuser.php --> we have a new SU flag: SU_IS_BANMASTER. You can now assign (apart from SU_EDIT_USERS) a new flag that lets one edit bans, even if he/she has no user edit rights. This makes sense, because editing users and banning them is far apart - a ban can be revoked easily, if somebody wrecked havoc in user files, or even deleted (!) them, well. Nasty. I have not limited the powers currently, all included, including perma bans. I also split up the bans from user.php to bans.php and subdirs to make it better distinguishable.
*corenews.php (new), superuser.php, lib/data/configuration.php --> added a "Core News" Section where news about the +nb Editions (bugfixes, whatnot) can be fetched from the server. Easy access to see what's new
*lib/checkban.php --> added a "how much time left" to the bans (misleading if you play from a different timezone)
*lib/installer/installer_stage_5.php --> added an output to display the mysql user rights. Particularly useful to check for the LOCK TABLES privilege (I won't parse that really. Too much hassle for the effect.

[FIXES]
*moderate.php --> bans could not be inserted if the banning member has ' or " in his name - there was no escape sequence for these chars in the SQL statement
*user.php --> Clan names with commas broke the view in the pulldown ... 